(Add) Main pages and style sheets

--- a/fontend/src/styles/styles.scss
+++ b/fontend/src/styles/styles.scss
@@ -6,3 +6,14 @@
 // Components
 
 // Pages
+@import "./pages/landing";
+@import "./pages/register";
+@import "./pages/login";
+@import "./pages/home";
+@import "./pages/booking";
+@import "./pages/booking-detail";
+@import "./pages/payment";
+@import "./pages/trips";
+@import "./pages/reservation";
+@import "./pages/favorites";
+ 
