--- a/fontend/src/styles/base/_variables.scss
+++ b/fontend/src/styles/base/_variables.scss
@@ -3,7 +3,7 @@ $colors: (
   "bg-secondary": #d9d9d9,
   "bg-tertiary": #bebebe,
   "btn-primary": #bb3d40,
-  "btn-secondary": #ff4d51,
+  "btn-secondary": #ff3a3f,
   "txt-dark": #000,
   "txt-light": #fff,
   "txt-placeholder": #9c9c9c,
